--- a/stock_price.ipynb
+++ b/stock_price.ipynb
@@ -438,6 +438,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 209,
+   "id": "8c791389",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1884, 0.6042, 0.2074]], grad_fn=<SoftmaxBackward0>)\n",
+      "0.0190257728099823\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt = sp500_headlines_2008_2024.head(1)\n",
+    "\n",
+    "inputs = tokenizer(tt['Title'][0], return_tensors=\"pt\", truncation=True)\n",
+    "outputs = model(**inputs)\n",
+    "probs = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
+    "\n",
+    "print(probs)\n",
+    "\n",
+    "# Custom score: Positive = +1, Neutral = 0, Negative = -1\n",
+    "score = (probs[0][2] - probs[0][0]).item()\n",
+    "\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "id": "61d2c6d4",
    "metadata": {},
@@ -668,6 +698,30 @@
     "\n",
     "sp500_headlines_2008_2024_test = add_future_crash_label(sp500_headlines_2008_2024_test, look_ahead_days, drop_threshold)\n",
     "sp500_headlines_2008_2024_test[['Date', 'CP', 'future_close', 'future_crash']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "a3b97220",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "807 18320\n",
+      "Ratio of crashed: 4.22 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count future crash\n",
+    "crashed = sp500_headlines_2008_2024_test['future_crash'].value_counts()[1]\n",
+    "not_crashed = sp500_headlines_2008_2024_test['future_crash'].value_counts()[0]\n",
+    "print(crashed, not_crashed)\n",
+    "\n",
+    "print(f'Ratio of crashed: {round(crashed/(crashed + not_crashed) * 100, 2)} %')"
    ]
   },
   {
